# Assistant_PROJECT

./: .gitignore  Dockerfile  HW_DS_1.ipynb  LICENSE  README.md  UML_Help_Assistant.drawio  addressbook.py  addressbook_classes.py  assistant.py  bot_classes.py  decorators.py  menu.py  notes.py  notes_classes.py  pyproject.toml  requirements.txt  setup.py  sort_directory.py
assistant/: Dockerfile  addressbook.py  addressbook_classes.py  checking.py  decorators.py  menu.py  notes.py  notes_classes.py  pretty_view.py  sort_directory.py
