[tool.poetry]
name = "assistant-project"
version = "0.1.0"
description = ""
authors = ["Denis Bilokon <greenjuiced@gmail.com>"]
readme = "README.md"
packages = [{include = "assistant_project"}]

[tool.poetry.dependencies]
python = "^3.11"
prettytable = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
